<resources>
    <string name="app_name">HamburgueriaZ</string>
    <string name="todo">TODO</string>
    <string name="fa_a_seu_pedido">FAÇA SEU PEDIDO!</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="escolha_os_adicionais">Escolha os adicionais:</string>
    <string name="bacon_r_2">Bacon (+R$2)</string>
    <string name="queijo_r_2">Queijo (+R$2)</string>
    <string name="onion_rings_r_3">Onion Rings (+R$3)</string>
    <string name="quantidade">Quantidade:</string>
    <string name="less">-</string>
    <string name="_0">0</string>
    <string name="more">+</string>
    <string name="total_r_0_00">Total: R$ 0,00</string>
    <string name="resumo_do_pedido">Resumo do Pedido</string>
    <string name="enviar_pedido">Enviar Pedido</string>
</resources>